--- a/app/client/package.json
+++ b/app/client/package.json
@@ -24,6 +24,7 @@
     "@sentry/tracing": "^6.2.4",
     "@sentry/webpack-plugin": "^1.12.1",
     "@tinymce/tinymce-react": "^3.13.0",
+    "@types/topojson-client": "^3.1.1",
     "@uppy/core": "^1.16.0",
     "@uppy/dashboard": "^1.16.0",
     "@uppy/file-input": "^1.4.22",
@@ -69,6 +70,7 @@
     "js-sha256": "^0.9.0",
     "jshint": "^2.13.4",
     "json-fn": "^1.1.1",
+    "leaflet": "^1.7.1",
     "libphonenumber-js": "^1.9.44",
     "lint-staged": "^9.2.5",
     "localforage": "^1.7.3",
@@ -113,6 +115,7 @@
     "react-infinite-scroller": "^1.2.4",
     "react-instantsearch-dom": "^6.4.0",
     "react-json-view": "^1.19.1",
+    "react-leaflet": "^3.2.5",
     "react-masonry-css": "^1.0.16",
     "react-media-recorder": "^1.6.1",
     "react-mentions": "^4.1.1",
@@ -152,6 +155,7 @@
     "styled-system": "^5.1.5",
     "tern": "^0.21.0",
     "tinycolor2": "^1.4.2",
+    "topojson-client": "^3.1.0",
     "toposort": "^2.0.2",
     "ts-loader": "^6.0.4",
     "tslib": "^2.3.1",
@@ -216,6 +220,7 @@
     "@types/jest": "^24.0.22",
     "@types/js-beautify": "^1.13.2",
     "@types/jshint": "^2.12.0",
+    "@types/leaflet": "^1.7.9",
     "@types/lodash": "^4.14.120",
     "@types/marked": "^1.2.2",
     "@types/moment-timezone": "^0.5.10",
