--- a/app/client/package.json
+++ b/app/client/package.json
@@ -24,6 +24,8 @@
     "@sentry/tracing": "^6.2.4",
     "@sentry/webpack-plugin": "^1.12.1",
     "@tinymce/tinymce-react": "^3.13.0",
+    "@turf/bbox": "^6.5.0",
+    "@types/topojson": "^3.2.2",
     "@types/topojson-client": "^3.1.1",
     "@uppy/core": "^1.16.0",
     "@uppy/dashboard": "^1.16.0",
